--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.1",
+    "apollo-server-express": "^3.13.0",
+    "axios": "^1.7.9",
     "bcrypt": "^5.0.0",
     "express": "^4.17.2",
-    "graphql": "^16.6.0",
+    "graphql": "^16.10.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "node-cron": "^3.0.3",
+    "openai": "^4.85.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
